--- a/front_end_collection/Tab_content/tab_content_anm/1/index.html
+++ b/front_end_collection/Tab_content/tab_content_anm/1/index.html
@@ -11,6 +11,7 @@
         <link rel="shortcut icon" href="../favicon.ico"> 
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
+		<script type="text/javascript" src="js/modernizr.custom.04022.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300,300italic' rel='stylesheet' type='text/css'>
 		<!--[if lt IE 9]>
 			<style>
