--- a/front_end_collection/anm_jumcart/1/index.html
+++ b/front_end_collection/anm_jumcart/1/index.html
@@ -7,17 +7,21 @@
 	<link rel="stylesheet" href="">
 	<style>
 		.b-cart {
-  width: 150px;
-  height: 37px;
-  background: #E74C3C;
-  color: #fff;
-  text-align: center;
-  font-family: "Helvetica Neue";
-  font-size: 21px;
-  padding-top: 13px;
-  border-bottom: 3px solid #d83d2d;
-  border-radius: 4px;
-  margin-left: 13px;
+    width: 150px;
+    height: 37px;
+    background: #E74C3C;
+    color: #fff;
+    text-align: center;
+    font-family: "Helvetica Neue";
+    font-size: 21px;
+    padding-top: 13px;
+    border-bottom: 3px solid #d83d2d;
+    border-radius: 4px;
+    margin-left: 13px;
+    float: right;
+    position: fixed;
+    top: 0px;
+    left: 0px;
 }
 .b-cart:hover {
   opacity: 0.8;
@@ -177,7 +181,124 @@
     <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
   </li>
 </ul>
+<ul class="b-items">
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 1</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 2</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 3</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 4</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 5</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 6</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 7</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 8</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+</ul>
+<ul class="b-items">
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 1</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 2</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 3</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 4</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 5</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 6</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 7</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+  <li class="b-items__item">
+    <a href="#">
+      <img class="b-items__item__img" src="http://fakeimg.pl/200x200/?text=World&font=lobster" alt="" />
+      <span class="b-items__item__title">Product 8</span>
+    </a>
+    <a href="#" class="b-items__item__add-to-cart">Add to cart</a>
+  </li>
+</ul>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 <script>
 	var cart = $('.b-cart'),
     cartCountCont = cart.find('.b-cart__count'),
@@ -193,14 +314,15 @@ addToCart.on('click', function (evt) {
       img = item.find('.b-items__item__img'),
       cartTopOffset = cart.offset().top - item.offset().top,
       cartLeftOffset = cart.offset().left - item.offset().left;
-  
+    console.log(cartTopOffset);
+      console.log(cartLeftOffset);
   var flyingImg = $('<img class="b-flying-img">');
   flyingImg.attr('src', img.attr('src'));
   flyingImg.css('width', '200').css('height', '200');
 
   cartCount += 1;
 
- flyingImg.animate({
+    flyingImg.animate({
     top: cartTopOffset,
     left: cartLeftOffset,
     width: 50,
@@ -210,7 +332,6 @@ addToCart.on('click', function (evt) {
     flyingImg.remove();
     cartCountCont.text(cartCount);
   });
-  
   el.parent().append(flyingImg);
 });
 </script>
